@@ -1,3 +1,10 @@
+2016-02-01 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCC.y
+	  Fix a bug: type mismatch between function definition and declaration.
+	* support/regression/tests/bug-2419.c
+	  Add a new test case.
+
 2016-01-31 Molnar Karoly <molnarkaroly AT users.sf.net>
 
 	* src/pic14/device.c,
